--- a/src/main/resources/de/hirola/runningplanbuilder/RunningPlanBuilder.properties
+++ b/src/main/resources/de/hirola/runningplanbuilder/RunningPlanBuilder.properties
@@ -28,3 +28,6 @@ mainToolMenu.runningUnit=Laufeinheit
 mainToolMenu.connection=Verbindung
 mainToolMenu.stop=Ende des Trainings
 mainToolMenu.info=Fügen Sie weitere Elemente durch Klick auf das entsprechende Element hinzu.
+
+# running unit node view
+unitNodeView.title=Laufeinheit anschauen / bearbeiten
