--- a/src/main/resources/de/hirola/runningplanbuilder/RunningPlanBuilder.properties
+++ b/src/main/resources/de/hirola/runningplanbuilder/RunningPlanBuilder.properties
@@ -3,9 +3,38 @@
 app.name=RunningPlanBuilder
 app.version=v.0.1
 
+# about dialog from main view
+about.alert.header=Ein einfaches Werkzeug, um Laufpläne zu bearbeiten oder zu erstellen,\n\
+  welche in der App "Laufplan" genutzt werden können.\nDiese Software ist Open Source und \
+  kann ohne Einschränkungen genutzt werden.
+about.alert.info=Copyright by Michael Schmidt - Hirola Consulting - 2022
+about.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder
+
+# debug dialog from main view
+debug.alert.header=Keine Software ist fehlerfrei, natürlich auch nicht diese.\n\
+  Bitte teilen Sie mir Fehler und auch Wünsche direkt bei GitHub mit.\n\
+  Gern können Sie auch Programm-Code beisteuern.
+debug.alert.info=Fehler und Wünsche melden
+debug.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder/issues
+
+# alert dialoge
+alert.template.emptyName=Es muss mindestens der Name angegeben werden.
+alert.template.clearRemarks=Sollen die Anmerkungen wirklich gelöscht werden?
+
 # common actions
+action.ok=OK
+action.cancel=Abbrechen
 action.edit=Bearbeiten
 action.delete=Löschen
+
+# weekdays
+monday=Montag
+tuesday=Dienstag
+wednesday=Mittwoch
+thursday=Donnerstag
+friday=Freitag
+saturday=Sonnabend
+sunday=Sonntag
 
 # main app menu
 # file menu
@@ -23,11 +52,29 @@ mainMenuBar.menuHelp.menuItemDebug=Fehler
 mainMenuBar.menuHelp.menuItemAbout=Über
 
 # main tool "menu"
-mainToolMenu.start=Beginn des Trainings
+mainToolMenu.newTemplate=Neue Vorlage
 mainToolMenu.runningUnit=Laufeinheit
-mainToolMenu.connection=Verbindung
 mainToolMenu.stop=Ende des Trainings
 mainToolMenu.info=Fügen Sie weitere Elemente durch Klick auf das entsprechende Element hinzu.
 
+# template view
+templateView.title=Vorlage bearbeiten
+templateView.infoText=Hier sollen einmal Informationen über die Vorlage stehen.
+templateView.nameLabelText=Laufplan-Name:
+templateView.orderNumberLabelText=Reihenfolge:
+templateView.remarksLabelText=Anmerkungen:
+templateView.saveButtonText=Speichern
+templateView.closeButtonText=Schliessen
+
 # running unit node view
-unitNodeView.title=Laufeinheit anschauen / bearbeiten
+unitNodeView.title=Laufeinheit bearbeiten
+unitNodeView.infoText=Hier sollen einmal Informationen über die Laufeinheiten stehen.
+unitNodeView.weekDayLabelText=Laufeinheit am:
+unitNodeView.weekLabelText=in der Woche:
+unitNodeView.movementTypeLabelText=Bewegungsart:
+unitNodeView.durationLabelText=Dauer (min):
+unitNodeView.saveButtonText=Speichern
+unitNodeView.closeButtonText=Schliessen
+
+# different strings
+misc.week=Woche
