--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,9 @@ dependencies {
     implementation 'de.hirola:sports-library:0.1-SNAPSHOT'
     implementation 'org.tinylog:tinylog-impl:2.5.0-M1.1'
     implementation 'org.tinylog:tinylog-api:2.5.0-M1.1'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
+    implementation 'org.dizitart:nitrite:3.4.3'
+    implementation 'org.slf4j:slf4j-simple:1.7.36'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
     implementation 'org.jetbrains:annotations:23.0.0'
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
