--- a/src/main/resources/de/hirola/runningplanbuilder/RunningPlanBuilder.properties
+++ b/src/main/resources/de/hirola/runningplanbuilder/RunningPlanBuilder.properties
@@ -45,6 +45,7 @@ mainMenuBar.menuFile.menuItemSave=Speichern
 mainMenuBar.menuFile.menuItemQuit=Beenden
 # edit menu
 mainMenuBar.menuEdit=Bearbeiten
+mainMenuBar.menuEdit.menuItemTemplate=Vorlage bearbeiten
 mainMenuBar.menuEdit.menuItemPreferences=Einstellungen
 # help menu
 mainMenuBar.menuHelp=Hilfe
@@ -55,7 +56,8 @@ mainMenuBar.menuHelp.menuItemAbout=Über
 mainToolMenu.newTemplate=Neue Vorlage
 mainToolMenu.runningUnit=Laufeinheit
 mainToolMenu.stop=Ende des Trainings
-mainToolMenu.info=Fügen Sie weitere Elemente durch Klick auf das entsprechende Element hinzu.
+mainToolMenu.info=Fügen Sie weitere Elemente durch Klick auf das entsprechende Element hinzu. \
+  Ein Doppelklick auf die rechte Editorfläche öffnet die Einstellungen der Laufplan-Vorlage.
 
 # template view
 templateView.title=Vorlage bearbeiten
