--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -74,6 +74,7 @@ unitNodeView.infoText=Hier sollen einmal Informationen über die Laufeinheiten st
 unitNodeView.weekDayLabelText=Laufeinheit am:
 unitNodeView.weekLabelText=in der Woche:
 unitNodeView.movementTypeLabelText=Bewegungsart:
+unitNodeView.movementTypePaceLabelText.prefix=Pace (min / km):
 unitNodeView.durationLabelText=Dauer (min):
 unitNodeView.saveButtonText=Speichern
 unitNodeView.closeButtonText=Schliessen
