--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -20,6 +20,7 @@ debug.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder/issues
 # alert dialoge
 alert.template.emptyName=Es muss mindestens der Name angegeben werden.
 alert.template.clearRemarks=Sollen die Anmerkungen wirklich gelöscht werden?
+alert.template.emptyDuration=Bitte die Dauer der Einheit angeben.
 
 # common actions
 action.ok=OK
@@ -68,16 +69,28 @@ templateView.remarksLabelText=Anmerkungen:
 templateView.saveButtonText=Speichern
 templateView.closeButtonText=Schliessen
 
-# running unit node view
-unitNodeView.title=Laufeinheit bearbeiten
-unitNodeView.infoText=Hier sollen einmal Informationen über die Laufeinheiten stehen.
-unitNodeView.weekDayLabelText=Laufeinheit am:
-unitNodeView.weekLabelText=in der Woche:
-unitNodeView.movementTypeLabelText=Bewegungsart:
-unitNodeView.movementTypePaceLabelText.prefix=Pace (min / km):
-unitNodeView.durationLabelText=Dauer (min):
-unitNodeView.saveButtonText=Speichern
-unitNodeView.closeButtonText=Schliessen
+# running plan entry view
+entryNodeView.title=Trainingsabschnitt bearbeiten
+entryNodeView.infoText=Hier sollen einmal Informationen über den Trainingsabschnitt stehen.
+entryNodeView.weekDayLabelText=Laufeinheit am:
+entryNodeView.weekLabelText=in der Woche:
+entryNodeView.runningUnitsLabelText=Laufeinheiten
+entryNodeView.addRunningUnitButtonText=Hinzufügen
+entryNodeView.saveButtonText=Speichern
+entryNodeView.closeButtonText=Schliessen
+entryNodeView.table.defaultLabelText=Keine Laufeinheiten vorhanden
+entryNodeView.table.column.1.headerText=Dauer
+entryNodeView.table.column.2.headerText=Bewegungsart (Kürzel)
+entryNodeView.table.column.3.headerText=Bewegungsart
+
+# running unit view
+runningUnitView.title=Laufeinheit bearbeiten
+runningUnitView.infoText=Hier sollen einmal Informationen über die Laufeinheiten stehen.
+runningUnitView.movementTypeLabelText=Bewegungsart:
+runningUnitView.movementTypePaceLabelText.prefix=Pace (min / km):
+runningUnitView.durationLabelText=Dauer (min):
+runningUnitView.saveButtonText=Speichern
+runningUnitView.closeButtonText=Schliessen
 
 # different strings
 misc.week=Woche
