--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -26,6 +26,7 @@ alert.template.emptyDuration=Bitte die Dauer der Einheit angeben.
 action.ok=OK
 action.cancel=Abbrechen
 action.edit=Bearbeiten
+action.save=Speichern
 action.delete=Löschen
 
 # weekdays
@@ -66,8 +67,6 @@ templateView.infoText=Hier sollen einmal Informationen über die Vorlage stehen.
 templateView.nameLabelText=Laufplan-Name:
 templateView.orderNumberLabelText=Reihenfolge:
 templateView.remarksLabelText=Anmerkungen:
-templateView.saveButtonText=Speichern
-templateView.closeButtonText=Schliessen
 
 # running plan entry view
 entryNodeView.title=Trainingsabschnitt bearbeiten
@@ -76,8 +75,6 @@ entryNodeView.weekDayLabelText=Laufeinheit am:
 entryNodeView.weekLabelText=in der Woche:
 entryNodeView.runningUnitsLabelText=Laufeinheiten
 entryNodeView.addRunningUnitButtonText=Hinzufügen
-entryNodeView.saveButtonText=Speichern
-entryNodeView.closeButtonText=Schliessen
 entryNodeView.table.defaultLabelText=Keine Laufeinheiten vorhanden
 entryNodeView.table.column.1.headerText=Dauer
 entryNodeView.table.column.2.headerText=Bewegungsart (Kürzel)
@@ -89,8 +86,6 @@ runningUnitView.infoText=Hier sollen einmal Informationen über die Laufeinheiten
 runningUnitView.movementTypeLabelText=Bewegungsart:
 runningUnitView.movementTypePaceLabelText.prefix=Pace (min / km):
 runningUnitView.durationLabelText=Dauer (min):
-runningUnitView.saveButtonText=Speichern
-runningUnitView.closeButtonText=Schliessen
 
 # different strings
 misc.week=Woche
