--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -22,6 +22,8 @@ alert.template.emptyName=Es muss mindestens der Name angegeben werden.
 alert.template.clearRemarks=Sollen die Anmerkungen wirklich gelöscht werden?
 alert.template.emptyDuration=Bitte die Dauer der Einheit angeben.
 
+alert.export.failed=Der Export ist fehlgeschlagen.
+
 # common actions
 action.ok=OK
 action.cancel=Abbrechen
@@ -89,3 +91,4 @@ runningUnitView.durationLabelText=Dauer (min):
 
 # different strings
 misc.week=Woche
+export.file.name=Laufplan.json
