--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ version '0.1'
 repositories {
     mavenCentral()
     maven {
-        setUrl("https://maven.pkg.github.com/hiroladev/sports-library")
+        setUrl("https://maven.pkg.github.com/hiroladev/sportslibrary")
         content {
             includeGroup("de.hirola")
         }
@@ -41,7 +41,7 @@ dependencies {
     implementation('com.dlsc.formsfx:formsfx-core:11.5.0') {
         exclude(group: 'org.openjfx')
     }
-    implementation 'de.hirola:sportslibrary:0.2-SNAPSHOT'
+    implementation 'de.hirola:sportsapplications:0.1-SNAPSHOT'
     implementation 'org.tinylog:tinylog-impl:2.5.0-M1.1'
     implementation 'org.tinylog:tinylog-api:2.5.0-M1.1'
     implementation 'org.dizitart:nitrite:3.4.4'
