--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -49,7 +49,7 @@ mainMenuBar.menuFile.menuItemSave=Speichern
 mainMenuBar.menuFile.menuItemQuit=Beenden
 # edit menu
 mainMenuBar.menuEdit=Bearbeiten
-mainMenuBar.menuEdit.menuItemTemplate=Vorlage bearbeiten
+mainMenuBar.menuEdit.menuItemTemplate=Laufplan bearbeiten
 mainMenuBar.menuEdit.menuItemPreferences=Einstellungen
 # help menu
 mainMenuBar.menuHelp=Hilfe
@@ -91,4 +91,4 @@ runningUnitView.durationLabelText=Dauer (min):
 
 # different strings
 misc.week=Woche
-export.file.name=Laufplan.json
+export.file.name=Laufplan
