--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -63,6 +63,13 @@ mainToolMenu.stop=Ende des Trainings
 mainToolMenu.info=Fügen Sie weitere Elemente durch Klick auf das entsprechende Element hinzu. \
   Ein Doppelklick auf die rechte Editorfläche öffnet die Einstellungen der Laufplan-Vorlage.
 
+# main view
+mainView.table.defaultLabelText=Keine Einträge vorhanden
+mainView.table.column.1.headerText=Woche
+mainView.table.column.2.headerText=Tag
+mainView.table.column.3.headerText=Dauer
+mainView.table.column.4.headerText=Laufeinheiten
+
 # template view
 templateView.title=Vorlage bearbeiten
 templateView.infoText=Hier sollen einmal Informationen über die Vorlage stehen.
