--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -22,7 +22,14 @@ alert.template.emptyName=Es muss mindestens der Name angegeben werden.
 alert.template.clearRemarks=Sollen die Anmerkungen wirklich gelöscht werden?
 alert.template.emptyDuration=Bitte die Dauer der Einheit angeben.
 
+alert.import.failed=Der Import ist fehlgeschlagen.
+alert.import.wrong.file.info=Es wurde ein Verzeichnis ausgewählt, die Datei ist nicht lesbar oder\
+  existiert nicht.
+alert.import.info=R
+
 alert.export.failed=Der Export ist fehlgeschlagen.
+
+alert.runningplan.null=Zuerst muss ein Laufplan erstellt werden.
 
 # common actions
 action.ok=OK
@@ -57,11 +64,9 @@ mainMenuBar.menuHelp.menuItemDebug=Fehler
 mainMenuBar.menuHelp.menuItemAbout=Über
 
 # main tool "menu"
-mainToolMenu.newTemplate=Neue Vorlage
+mainToolMenu.newTemplate=Neuer Laufplan
 mainToolMenu.runningUnit=Laufeinheit
-mainToolMenu.stop=Ende des Trainings
-mainToolMenu.info=Fügen Sie weitere Elemente durch Klick auf das entsprechende Element hinzu. \
-  Ein Doppelklick auf die rechte Editorfläche öffnet die Einstellungen der Laufplan-Vorlage.
+mainToolMenu.info=Fügen Sie weitere Elemente durch Klick auf das entsprechende Element hinzu.
 
 # main view
 mainView.table.defaultLabelText=Keine Einträge vorhanden
