--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -25,14 +25,15 @@ alert.template.emptyDuration=Bitte die Dauer der Einheit angeben.
 alert.import.failed=Der Import ist fehlgeschlagen.
 alert.import.wrong.file.info=Es wurde ein Verzeichnis ausgewählt, die Datei ist nicht lesbar oder\
   existiert nicht.
-alert.import.info=R
 
 alert.export.failed=Der Export ist fehlgeschlagen.
 
 alert.runningplan.null=Zuerst muss ein Laufplan erstellt werden.
+alert.runningplan.overwrite=Alle eingebenen Daten werden gelöscht.\n\
+  Haben Sie den Laufplan bereits gesichert?
 
 # common actions
-action.ok=OK
+action.yes=Ja
 action.cancel=Abbrechen
 action.edit=Bearbeiten
 action.save=Speichern
