--- a/build.gradle
+++ b/build.gradle
@@ -68,3 +68,5 @@ jlink {
 jlinkZip {
     group = 'distribution'
 }
+sourceCompatibility = JavaVersion.VERSION_1_9
+targetCompatibility = JavaVersion.VERSION_1_9
