--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -5,8 +5,8 @@ app.version=v.0.1
 
 # about dialog from main view
 about.alert.header=Ein einfaches Werkzeug, um Laufpläne zu bearbeiten oder zu erstellen,\n\
-  welche in der App "Laufplan" genutzt werden können.\nDiese Software ist Open Source und \
-  kann ohne Einschränkungen genutzt werden.
+  welche in der App "Laufplan" genutzt werden können.\n\
+  Diese Software ist Open Source und kann ohne Einschränkungen genutzt werden.
 about.alert.info=Copyright by Michael Schmidt - Hirola Consulting - 2022
 about.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder
 
@@ -17,7 +17,7 @@ debug.alert.header=Keine Software ist fehlerfrei, natürlich auch nicht diese.\n\
 debug.alert.info=Fehler und Wünsche melden
 debug.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder/issues
 
-# alert dialoge
+# alert dialog
 alert.template.emptyName=Es muss mindestens der Name angegeben werden.
 alert.template.clearRemarks=Sollen die Anmerkungen wirklich gelöscht werden?
 alert.template.emptyDuration=Bitte die Dauer der Einheit angeben.
@@ -29,7 +29,7 @@ alert.import.wrong.file.info=Es wurde ein Verzeichnis ausgewählt, die Datei ist 
 alert.export.failed=Der Export ist fehlgeschlagen.
 
 alert.runningplan.null=Zuerst muss ein Laufplan erstellt werden.
-alert.runningplan.overwrite=Alle eingebenen Daten werden gelöscht.\n\
+alert.runningplan.overwrite=Alle eingegebenen Daten werden gelöscht.\n\
   Haben Sie den Laufplan bereits gesichert?
 
 # common actions
@@ -77,8 +77,8 @@ mainView.table.column.3.headerText=Dauer
 mainView.table.column.4.headerText=Laufeinheiten
 
 # template view
-templateView.title=Vorlage bearbeiten
-templateView.infoText=Hier sollen einmal Informationen über die Vorlage stehen.
+templateView.title=Laufplan bearbeiten
+templateView.infoText=Hier sollen einmal Informationen über Laufpläne stehen.
 templateView.nameLabelText=Laufplan-Name:
 templateView.orderNumberLabelText=Reihenfolge:
 templateView.remarksLabelText=Anmerkungen:
@@ -101,6 +101,12 @@ runningUnitView.infoText=Hier sollen einmal Informationen über die Laufeinheiten
 runningUnitView.movementTypeLabelText=Bewegungsart:
 runningUnitView.movementTypePaceLabelText.prefix=Pace (min / km):
 runningUnitView.durationLabelText=Dauer (min):
+
+# preferences view
+preferencesView.title=Einstellungen
+preferencesView.debugModeCheckBoxLabel.text=Fehler aufzeichnen:
+preferencesView.localizationComboBoxLabel.text=Sprache:
+preferencesView.useLastImportDirCheckBoxLabel.text=Letzten Ordner merken:
 
 # different strings
 misc.week=Woche
