--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -1,113 +1,116 @@
 # RunningPlanBuilder.properties
+# default bundle - a copy of the english bundle
 # program infos
 app.name=RunningPlanBuilder
 app.version=v.0.1
 
 # about dialog from main view
-about.alert.header=Ein einfaches Werkzeug, um Laufpläne zu bearbeiten oder zu erstellen,\n\
-  welche in der App "Laufplan" genutzt werden können.\n\
-  Diese Software ist Open Source und kann ohne Einschränkungen genutzt werden.
+about.alert.header=A simple tool to edit or create running plans,\n\
+  which can be used in the Running Plan app.\n\
+  This software is open source and can be used without restrictions.
 about.alert.info=Copyright by Michael Schmidt - Hirola Consulting - 2022
 about.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder
 
 # debug dialog from main view
-debug.alert.header=Keine Software ist fehlerfrei, natürlich auch nicht diese.\n\
-  Bitte teilen Sie mir Fehler und auch Wünsche direkt bei GitHub mit.\n\
-  Gern können Sie auch Programm-Code beisteuern.
-debug.alert.info=Fehler und Wünsche melden
+debug.alert.header=No software is error-free, of course not this one either.\n\
+Please report bugs and requests directly to GitHub.\n\
+You are also welcome to contribute program code.
+debug.alert.info=Report bugs and requests
 debug.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder/issues
 
-# alert dialog
-alert.template.emptyName=Es muss mindestens der Name angegeben werden.
-alert.template.clearRemarks=Sollen die Anmerkungen wirklich gelöscht werden?
-alert.template.emptyDuration=Bitte die Dauer der Einheit angeben.
+# alert dialogs
+alert.template.emptyName=At least the name must be given.
+alert.template.clearRemarks=Do you really want to delete the remarks?
+alert.template.emptyDuration=Please indicate the duration of the unit.
 
-alert.import.failed=Der Import ist fehlgeschlagen.
-alert.import.wrong.file.info=Es wurde ein Verzeichnis ausgewählt, die Datei ist nicht lesbar oder\
-  existiert nicht.
+alert.import.failed=The import failed.
+alert.import.wrong.file.info=A directory was selected, the file is unreadable or\
+   does not exist.
 
-alert.export.failed=Der Export ist fehlgeschlagen.
+alert.export.failed=The export failed.
 
-alert.runningplan.null=Zuerst muss ein Laufplan erstellt werden.
-alert.runningplan.overwrite=Alle eingegebenen Daten werden gelöscht.\n\
-  Haben Sie den Laufplan bereits gesichert?
+alert.runningplan.null=First, a running plan must be created.
+alert.runningplan.overwrite=All entered data will be deleted.\n\
+   Have you already saved the running plan?
 
 # common actions
-action.yes=Ja
-action.cancel=Abbrechen
-action.edit=Bearbeiten
-action.save=Speichern
-action.delete=Löschen
+action.yes=Yes
+action.cancel=Cancel
+action.edit=Edit
+action.save=Save
+action.delete=Delete
 
 # weekdays
-monday=Montag
-tuesday=Dienstag
-wednesday=Mittwoch
-thursday=Donnerstag
-friday=Freitag
-saturday=Sonnabend
-sunday=Sonntag
+monday=Monday
+tuesday=Tuesday
+wednesday=Wednesday
+thursday=Thursday
+friday=Friday
+saturday=Saturday
+sunday=Sunday
 
 # main app menu
 # file menu
-mainMenuBar.menuFile=Datei
-mainMenuBar.menuFile.menuItemNew=Neu
-mainMenuBar.menuFile.menuItemOpen=Öffnen
-mainMenuBar.menuFile.menuItemSave=Speichern
-mainMenuBar.menuFile.menuItemQuit=Beenden
+mainMenuBar.menuFile=File
+mainMenuBar.menuFile.menuItemNew=New
+mainMenuBar.menuFile.menuItemOpen=Open
+mainMenuBar.menuFile.menuItemSave=Save
+mainMenuBar.menuFile.menuItemQuit=Exit
 # edit menu
-mainMenuBar.menuEdit=Bearbeiten
-mainMenuBar.menuEdit.menuItemTemplate=Laufplan bearbeiten
-mainMenuBar.menuEdit.menuItemPreferences=Einstellungen
+mainMenuBar.menuEdit=Edit
+mainMenuBar.menuEdit.menuItemTemplate=Edit Running plan
+mainMenuBar.menuEdit.menuItemPreferences=Settings
 # help menu
-mainMenuBar.menuHelp=Hilfe
-mainMenuBar.menuHelp.menuItemDebug=Fehler
-mainMenuBar.menuHelp.menuItemAbout=Über
+mainMenuBar.menuHelp=Help
+mainMenuBar.menuHelp.menuItemDebug=Bugs
+mainMenuBar.menuHelp.menuItemAbout=About
 
 # main tool "menu"
-mainToolMenu.newTemplate=Neuer Laufplan
-mainToolMenu.runningUnit=Laufeinheit
-mainToolMenu.info=Fügen Sie weitere Elemente durch Klick auf das entsprechende Element hinzu.
+mainToolMenu.newTemplate=New Running plan
+mainToolMenu.runningUnit=Running unit
+mainToolMenu.info=Add further elements by clicking on the corresponding element.
 
 # main view
-mainView.table.defaultLabelText=Keine Einträge vorhanden
-mainView.table.column.1.headerText=Woche
-mainView.table.column.2.headerText=Tag
-mainView.table.column.3.headerText=Dauer
-mainView.table.column.4.headerText=Laufeinheiten
+mainView.table.defaultLabelText=No entries available
+mainView.table.column.1.headerText=Week
+mainView.table.column.2.headerText=Day
+mainView.table.column.3.headerText=Duration
+mainView.table.column.4.headerText=Running entries
 
 # template view
-templateView.title=Laufplan bearbeiten
-templateView.infoText=Hier sollen einmal Informationen über Laufpläne stehen.
-templateView.nameLabelText=Laufplan-Name:
-templateView.orderNumberLabelText=Reihenfolge:
-templateView.remarksLabelText=Anmerkungen:
+templateView.title=Edit Running plan
+templateView.infoText=Here is some information about running plans.
+templateView.nameLabelText=Name of running plan:
+templateView.orderNumberLabelText=Order:
+templateView.remarksLabelText=Remarks:
 
 # running plan entry view
-entryNodeView.title=Trainingsabschnitt bearbeiten
-entryNodeView.infoText=Hier sollen einmal Informationen über den Trainingsabschnitt stehen.
-entryNodeView.weekDayLabelText=Laufeinheit am:
-entryNodeView.weekLabelText=in der Woche:
-entryNodeView.runningUnitsLabelText=Laufeinheiten
-entryNodeView.addRunningUnitButtonText=Hinzufügen
-entryNodeView.table.defaultLabelText=Keine Laufeinheiten vorhanden
-entryNodeView.table.column.1.headerText=Dauer
-entryNodeView.table.column.2.headerText=Bewegungsart (Kürzel)
-entryNodeView.table.column.3.headerText=Bewegungsart
+entryNodeView.title=Edit Running entry
+entryNodeView.infoText=Here is some information about the training entries.
+entryNodeView.weekDayLabelText=Running entry at:
+entryNodeView.weekLabelText=in week:
+entryNodeView.runningUnitsLabelText=Running units
+entryNodeView.addRunningUnitButtonText=Add running unit
+entryNodeView.table.defaultLabelText=No running units available.
+entryNodeView.table.column.1.headerText=Duration
+entryNodeView.table.column.2.headerText=Movement type (Key)
+entryNodeView.table.column.3.headerText=Movement type
 
 # running unit view
-runningUnitView.title=Laufeinheit bearbeiten
-runningUnitView.infoText=Hier sollen einmal Informationen über die Laufeinheiten stehen.
-runningUnitView.movementTypeLabelText=Bewegungsart:
+runningUnitView.title=Edit running unit
+runningUnitView.infoText=Here should be information about the running units.
+runningUnitView.movementTypeLabelText=Movement type:
 runningUnitView.movementTypePaceLabelText.prefix=Pace (min / km):
-runningUnitView.durationLabelText=Dauer (min):
+runningUnitView.durationLabelText=Duration (min):
 
 # preferences view
-preferencesView.title=Einstellungen
-preferencesView.debugModeCheckBoxLabel.text=Fehler aufzeichnen:
-preferencesView.localizationComboBoxLabel.text=Sprache:
-preferencesView.useLastImportDirCheckBoxLabel.text=Letzten Ordner merken:
+preferencesView.title=Settings
+preferencesView.debugModeCheckBoxLabel.text=Record errors:
+preferencesView.debugModeCheckBoxInfoLabel.text=The debug mode will be activated after restarting the app.
+preferencesView.localizationComboBoxLabel.text=Language:
+preferencesView.localizationComboBoxInfoLabel.text=The language will be changed after restarting the app.
+preferencesView.useLastImportDirCheckBoxLabel.text=Remember last folder:
 
 # different strings
-misc.week=Woche
-export.file.name=Laufplan
+misc.week=Week
+export.file.name=RunningPlan
