--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -2,21 +2,26 @@
 # default bundle - a copy of the english bundle
 # program infos
 app.name=RunningPlanBuilder
-app.version=v.0.1
-
-# about dialog from main view
-about.alert.header=A simple tool to edit or create running plans,\n\
-  which can be used in the Running Plan app.\n\
-  This software is open source and can be used without restrictions.
-about.alert.info=Copyright by Michael Schmidt - Hirola Consulting - 2022
-about.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder
+app.version=v0.1
 
 # debug dialog from main view
-debug.alert.header=No software is error-free, of course not this one either.\n\
+alert.debug.header=No software is error-free, of course not this one either.\n\
 Please report bugs and requests directly to GitHub.\n\
 You are also welcome to contribute program code.
-debug.alert.info=Report bugs and requests
-debug.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder/issues
+alert.debug.info=Report bugs and requests
+alert.debug.info.url=https://github.com/hiroladev/RunningPlanBuilder/issues
+
+# licenses dialog from main view
+alert.licenses.header=This app uses various third party libraries and software.
+alert.licenses.info=More information about the libraries used.
+alert.licenses.info.url=https://github.com/hiroladev/RunningPlanBuilder/wiki/Licences
+
+# about dialog from main view
+alert.about.header=A simple tool to edit or create running plans,\n\
+  which can be used in the Running Plan app.\n\
+  This software is open source and can be used without restrictions.
+alert.about.info=Copyright by Michael Schmidt - Hirola Consulting - 2022
+alert.about.info.url=https://github.com/hiroladev/RunningPlanBuilder
 
 # alert dialogs
 alert.template.emptyName=At least the name must be given.
@@ -63,6 +68,7 @@ mainMenuBar.menuEdit.menuItemPreferences=Settings
 # help menu
 mainMenuBar.menuHelp=Help
 mainMenuBar.menuHelp.menuItemDebug=Bugs
+mainMenuBar.menuHelp.menuItemLicenses=Licenses
 mainMenuBar.menuHelp.menuItemAbout=About
 
 # main tool "menu"
@@ -106,8 +112,9 @@ runningUnitView.durationLabelText=Duration (min):
 # preferences view
 preferencesView.title=Settings
 preferencesView.debugModeCheckBoxLabel.text=Record errors:
-preferencesView.debugModeCheckBoxInfoLabel.text=The debug mode will be activated after restarting the app.
 preferencesView.localizationComboBoxLabel.text=Language:
+preferencesView.debugModeCheckBoxInfoLabel.text=The debug mode will be activated after restarting the app.
+preferencesView.useLastWindowSizeCheckBoxLabel.text=Use last window size:
 preferencesView.localizationComboBoxInfoLabel.text=The language will be changed after restarting the app.
 preferencesView.useLastImportDirCheckBoxLabel.text=Remember last folder:
 
