--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ version '0.1'
 repositories {
     mavenCentral()
     maven {
-        setUrl("https://maven.pkg.github.com/hiroladev/sportslibrary")
+        setUrl("https://maven.pkg.github.com/hiroladev/sportsapplications")
         content {
             includeGroup("de.hirola")
         }
@@ -58,11 +58,14 @@ test {
 }
 
 jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip") as RegularFile
+    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'app'
+        name = 'RunningPlanBuilder'
     }
+    forceMerge('tinylog-api')
+    forceMerge('jackson-core')
+    forceMerge('jackson-datatype')
 }
 
 jlinkZip {
