import and view running plan from iCAL

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation 'org.tinylog:tinylog-api:2.5.0-M1.1'
     implementation 'org.dizitart:nitrite:3.4.4'
     implementation 'org.slf4j:slf4j-simple:1.7.36'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
     implementation 'org.jetbrains:annotations:23.0.0'
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
@@ -71,5 +71,5 @@ jlink {
 jlinkZip {
     group = 'distribution'
 }
-sourceCompatibility = JavaVersion.VERSION_1_9
-targetCompatibility = JavaVersion.VERSION_1_9
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
