--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -54,11 +54,16 @@ friday=Friday
 saturday=Saturday
 sunday=Sunday
 
+# default values
+movementType.name.default=Not defined
+runningplanentry.remarks.default=No remarks available
+
 # main app menu
 # file menu
 mainMenuBar.menuFile=File
 mainMenuBar.menuFile.menuItemNew=New
-mainMenuBar.menuFile.menuItemOpen=Open
+mainMenuBar.menuFile.menuItemImportJSON=Import JSON
+mainMenuBar.menuFile.menuItemImportICAL=Import iCAL
 mainMenuBar.menuFile.menuItemSave=Save
 mainMenuBar.menuFile.menuItemQuit=Exit
 # edit menu
@@ -78,10 +83,12 @@ mainToolMenu.info=Add further elements by clicking on the corresponding element.
 
 # main view
 mainView.table.defaultLabelText=No entries available
-mainView.table.column.1.headerText=Week
-mainView.table.column.2.headerText=Day
-mainView.table.column.3.headerText=Duration
-mainView.table.column.4.headerText=Running entries
+mainView.table.column.week.headerText=Week
+mainView.table.column.day.headerText=Day
+mainView.table.column.duration.headerText=Duration
+mainView.table.column.distance.headerText=Distance
+mainView.table.column.remarks.headerText=Remarks
+mainView.table.column.entries.headerText=Running entries
 
 # template view
 templateView.title=Edit Running plan
