import and view running plan from iCAL

--- a/src/main/resources/RunningPlanBuilder.properties
+++ b/src/main/resources/RunningPlanBuilder.properties
@@ -105,9 +105,10 @@ entryNodeView.weekLabelText=in week:
 entryNodeView.runningUnitsLabelText=Running units
 entryNodeView.addRunningUnitButtonText=Add running unit
 entryNodeView.table.defaultLabelText=No running units available.
-entryNodeView.table.column.1.headerText=Duration
-entryNodeView.table.column.2.headerText=Movement type (Key)
-entryNodeView.table.column.3.headerText=Movement type
+entryNodeView.table.column.duration.headerText=Duration
+entryNodeView.table.column.movementType.key.headerText=Key
+entryNodeView.table.column.movementType.name.headerText=Movement type
+entryNodeView.table.column.movementType.runningInfos.headerText=Running infos
 
 # running unit view
 runningUnitView.title=Edit running unit
